Fix inline list spacing

--- a/assets/css/_components.sass
+++ b/assets/css/_components.sass
@@ -149,4 +149,5 @@ code
         @extend .link
 
 .list-inline > *
+    line-height: 5
     margin: 0 15px
